修改样式 修复bug 添加首页动画

--- a/richu_web/contact.html
+++ b/richu_web/contact.html
@@ -122,90 +122,126 @@
           <div class="c-name">临海建新化工有限公司</div>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省台州市临海医化园区
+            <span>
+              浙江省台州市临海医化园区
+            </span>
           </div>
           <a class="c-detail-row" href="tel:0576-8558-8488">
             <img src="./assets/img/s-c-phone.png" alt="" />
-            0576-8558-8488
+            <span>
+              0576-8558-8488
+            </span>
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
+            <span>
+              zb@sfcc.com.cn
+            </span>
           </div>
         </div>
         <div class="company-contact-item">
           <div class="c-name">宁波远欧精细化工有限公司</div>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省宁波市石化经济技术开发区北海路
+            <span>
+              浙江省宁波市石化经济技术开发区北海路
+            </span>
           </div>
           <a class="c-detail-row" href="tel:0574-8650-3602">
             <img src="./assets/img/s-c-phone.png" alt="" />
-            0574-8650-3602
+            <span>
+              0574-8650-3602
+            </span>
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
+            <span>
+              zb@sfcc.com.cn
+            </span>
           </div>
         </div>
         <div class="company-contact-item">
           <div class="c-name">浙江日出精细化工有限公司</div>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-location.png" alt="" />
-            宁波市鄞州区天童南路588号宁波商会国贸大厦
+            <span>
+              宁波市鄞州区天童南路588号宁波商会国贸大厦A42楼
+            </span>
           </div>
           <a class="c-detail-row" href="tel:0574-8797-9999">
             <img src="./assets/img/s-c-phone.png" alt="" />
-            0574-8797-9999
+            <span>
+              0574-8797-9999
+            </span>
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
+            <span>
+              zb@sfcc.com.cn
+            </span>
           </div>
         </div>
         <div class="company-contact-item">
           <div class="c-name">宁波日出石化有限公司</div>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-location.png" alt="" />
-            浙江省台州市临海医化园区
+            <span>
+              浙江省台州市临海医化园区
+            </span>
           </div>
           <a class="c-detail-row" href="tel:0576-85588488">
             <img src="./assets/img/s-c-phone.png" alt="" />
-            0576-85588488
+            <span>
+              0576-85588488
+            </span>
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
+            <span>
+              zb@sfcc.com.cn
+            </span>
           </div>
         </div>
         <div class="company-contact-item">
           <div class="c-name">云南日出药业有限公司</div>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-location.png" alt="" />
-            云南省文山州文山市三七国际交易中心
+            <span>
+              云南省文山州文山市三七国际交易中心
+            </span>
           </div>
           <a class="c-detail-row" href="tel:0876-2629000">
             <img src="./assets/img/s-c-phone.png" alt="" />
-            0876-2629000
+            <span>
+              0876-2629000
+            </span>
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
+            <span>
+              zb@sfcc.com.cn
+            </span>
           </div>
         </div>
         <div class="company-contact-item">
           <div class="c-name">日出日本公司</div>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-location.png" alt="" />
-            东京都中央区日本桥兜町11-7BM兜町大厦4楼
+            <span>
+              东京都中央区日本桥兜町11-7BM兜町大厦4楼
+            </span>
           </div>
           <a class="c-detail-row" href="tel:0081-3-36676222">
             <img src="./assets/img/s-c-phone.png" alt="" />
-            0081-3-36676222
+            <span>
+              0081-3-36676222
+            </span>
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            zb@sfcc.com.cn
+            <span>
+              zb@sfcc.com.cn
+            </span>
           </div>
         </div>
       </div>
