--- a/richu_web/index.html
+++ b/richu_web/index.html
@@ -94,19 +94,19 @@
     </section>
 
     <section
-      class="index-section"
+      class="index-section active"
       style="background: url('./assets/img/index-section-1.jpg');"
     >
       <div class="middle-container">
-        <div class="title">分销经营</div>
-        <div class="index-pager-wrap">
+        <div class="title wow bounceInUp" data-wow-duration="2s" data-wow-delay="0s">分销经营</div>
+        <div class="index-pager-wrap wow bounceInUp" data-wow-duration="2s" data-wow-delay=".3s">
           <div class="i-p-pager">
             <span class="i-p-num current">01</span>
             <span class="i-p-line"></span>
             <span class="i-p-num">05</span>
           </div>
         </div>
-        <div class="content">
+        <div class="content wow bounceInUp" data-wow-duration="2s" data-wow-delay=".6s">
           <div>
             专业从事精细化学品经营的经销商，渠道经营，分销代理式商业模式。为合作伙伴提供技术，安全，质量管理和金融服务
           </div>
@@ -124,7 +124,7 @@
             >胶粘剂
           </div>
         </div>
-        <div class="number-group">
+        <div class="number-group wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">
           <span class="number">2211<span class="text">客户</span></span>
           <span class="middle-space"></span>
           <span class="number">230<span class="text">产品</span></span>
@@ -135,7 +135,7 @@
             >95<span class="text">%销售至终端客户</span></span
           >
         </div>
-        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate">查看更多</a>
+        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="1.2s">查看更多</a>
       </div>
     </section>
 
@@ -144,15 +144,15 @@
       style="background: url('./assets/img/index-section-2.jpg');"
     >
       <div class="middle-container">
-        <div class="title">植物保护</div>
-        <div class="index-pager-wrap">
+        <div class="title wow bounceInUp" data-wow-duration="2s" data-wow-delay="0.0s">植物保护</div>
+        <div class="index-pager-wrap wow bounceInUp" data-wow-duration="2s" data-wow-delay="0.3s">
           <div class="i-p-pager">
             <span class="i-p-num current">02</span>
             <span class="i-p-line"></span>
             <span class="i-p-num">05</span>
           </div>
         </div>
-        <div class="content">
+        <div class="content wow bounceInUp" data-wow-duration="2s" data-wow-delay="0.6s">
           <div>
             从事以溴甲烷及其衍生产品为核心的医药、农药原料药和制剂的生产研究；联合国特许溴甲烷生产资质。致力于三七药用植物的标准化种植以及营销；依托自主土壤消毒产品、熏蒸技术和原创研发的三七连作技术，为生物医药和大健康产业提供优质中药材三七。
           </div>
@@ -164,7 +164,7 @@
           <div>农药熏蒸剂：地美地丰®</div>
           <div>原生态药材：三七及其系列产品</div>
         </div>
-        <a href="project.html?action=ZhiWuBaoHu" class="btn-small animate">查看更多</a>
+        <a href="project.html?action=ZhiWuBaoHu" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="0.9s">查看更多</a>
       </div>
     </section>
 
@@ -173,15 +173,15 @@
       style="background: url('./assets/img/index-section-3.jpg');"
     >
       <div class="middle-container">
-        <div class="title">动物健康</div>
-        <div class="index-pager-wrap">
+        <div class="title wow bounceInUp" data-wow-duration="2s" data-wow-delay="0s">动物健康</div>
+        <div class="index-pager-wrap wow bounceInUp" data-wow-duration="2s" data-wow-delay=".3s">
           <div class="i-p-pager">
             <span class="i-p-num current">03</span>
             <span class="i-p-line"></span>
             <span class="i-p-num">05</span>
           </div>
         </div>
-        <div class="content" style="max-width: 490px;">
+        <div class="content wow bounceInUp" data-wow-duration="2s" data-wow-delay=".6s" style="max-width: 490px;">
           <div>
             通过欧盟GMP认证；非无菌固体粉末兽药制剂合同制备提供三文鱼海虱问题解决方案；改善畜牧行业养殖环境
           </div>
@@ -195,7 +195,7 @@
             3,6-二氯哒嗪&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2,6-二氯吡嗪
           </div>
         </div>
-        <a href="project.html?action=DongWuJianKang" class="btn-small animate">查看更多</a>
+        <a href="project.html?action=DongWuJianKang" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">查看更多</a>
       </div>
     </section>
 
@@ -204,15 +204,15 @@
       style="background: url('./assets/img/index-section-4.jpg');"
     >
       <div class="middle-container">
-        <div class="title">国际贸易</div>
-        <div class="index-pager-wrap">
+        <div class="title wow bounceInUp" data-wow-duration="2s" data-wow-delay="0s">国际贸易</div>
+        <div class="index-pager-wrap wow bounceInUp" data-wow-duration="2s" data-wow-delay=".3s">
           <div class="i-p-pager">
             <span class="i-p-num current">04</span>
             <span class="i-p-line"></span>
             <span class="i-p-num">05</span>
           </div>
         </div>
-        <div class="content">
+        <div class="content wow bounceInUp" data-wow-duration="2s" data-wow-delay=".6s">
           <div>
             基础化学品渠道服务型贸易商，与上游众多企业建立战略合作关系
           </div>
@@ -221,7 +221,7 @@
             乙二醇、二甘醇、苯乙烯、甲苯、二甲苯、纯苯、甲醇、聚乙烯、聚丙烯、聚碳酸酯、ABS、聚苯乙烯、PMMA、特种工程塑料
           </div>
         </div>
-        <div class="partner">
+        <div class="partner wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">
           <div class="p-label">主要合作伙伴：</div>
           <div class="logo-group">
             <div class="item-wrap">
@@ -262,7 +262,7 @@
             </div>
           </div>
         </div>
-        <a href="project.html?action=GuoJiMaoYi" class="btn-small animate">查看更多</a>
+        <a href="project.html?action=GuoJiMaoYi" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay="1.2s">查看更多</a>
       </div>
     </section>
 
@@ -271,15 +271,15 @@
       style="background: url('./assets/img/index-section-5.jpg');"
     >
       <div class="middle-container">
-        <div class="title">分销经营</div>
-        <div class="index-pager-wrap">
+        <div class="title wow bounceInUp" data-wow-duration="2s" data-wow-delay="0s">分销经营</div>
+        <div class="index-pager-wrap wow bounceInUp" data-wow-duration="2s" data-wow-delay=".3s">
           <div class="i-p-pager">
             <span class="i-p-num current">05</span>
             <span class="i-p-line"></span>
             <span class="i-p-num">05</span>
           </div>
         </div>
-        <div class="content">
+        <div class="content wow bounceInUp" data-wow-duration="2s" data-wow-delay=".6s">
           <div>
             致力于中国化学品在日本的分销经营，出口日本精细化学品至中国及东南亚各国，代理出口日本高端化学品、催化剂及机械设备。
           </div>
@@ -289,7 +289,7 @@
             醋酸乙酯、醋酸丁酯、异丙醇、醋酸正丙酯、醋酸异丙酯、正丙醇、1，2-己二醇、异已烷、环己酮、N,N-二甲基甲酰胺、丙二醇、丙二醇甲醚醋酸酯、N-甲基吡咯烷酮、四氢呋喃、磷酸三苯酯、二氯甲烷、三氯乙烯、四氯乙烯、苯甲醇。
           </div>
         </div>
-        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate">查看更多</a>
+        <a href="project.html?action=fenXiaoJingYing" class="btn-small animate wow bounceInUp" data-wow-duration="2s" data-wow-delay=".9s">查看更多</a>
       </div>
     </section>
 
