--- a/richu_web/copyright.html
+++ b/richu_web/copyright.html
@@ -42,15 +42,11 @@
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="news.html">新闻中心</a></li>
             <li><a href="contact.html">联系我们</a></li>
+            <li><a href="news.html">新闻中心</a></li>
           </ul>
-          <a class="h-search nav-active" href="search.html">
-            <img
-              class="search-icon"
-              src="./assets/img/nav-bar-search-green.svg"
-              alt=""
-            />
+          <a class="h-search animate" href="search.html">
+            <div class="search-icon"></div>
             <span>产品查询</span>
           </a>
         </div>
@@ -66,15 +62,20 @@
           <li><a href="about.html">关于日出</a></li>
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="news.html">新闻中心</a></li>
           <li><a href="contact.html">联系我们</a></li>
+          <li><a href="news.html">新闻中心</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
     </header>
     <!-- 头部 end -->
 
-    <section class="privacy-section section-top">
+    <section
+      class="about-top-banner"
+      style="background-image: url('./assets/img/banner-984@2x.png');"
+    ></section>
+
+    <section class="privacy-section">
       <div class="privacy-editor">
         <h3>慕枫网络版权声明</h3>
         <p>访问者在接受本网站服务之前，请务必仔细阅读本条款并同意本声明。访问者访问本网站的行为以及通过各类方式利用本网站的行为，都将被视作是对本声明全部内容的无异议的认可;如有异议，请立即跟本网站协商，并取得本网站的书面同意意见。</p>
@@ -101,10 +102,8 @@
     <!-- 底部 -->
     <footer class="footer">
       <div class="btn-scroll-top">
-        <a id="toTop" class="scroll-top" href="javascript:void(0)">
-          <object class="animate">
-            <embed src="./assets/img/scroll-top.svg" />
-          </object>
+        <a id="toTop" class="scroll-top animate" href="javascript:void(0)">
+          <span class="scroll-top-icon animate"></span>
         </a>
       </div>
       <div class="f-main">
