--- a/richu_web/index.html
+++ b/richu_web/index.html
@@ -42,15 +42,11 @@
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="news.html">新闻中心</a></li>
             <li><a href="contact.html">联系我们</a></li>
+            <li><a href="news.html">新闻中心</a></li>
           </ul>
-          <a class="h-search nav-active" href="search.html">
-            <img
-              class="search-icon"
-              src="./assets/img/nav-bar-search-green.svg"
-              alt=""
-            />
+          <a class="h-search animate" href="search.html">
+            <div class="search-icon"></div>
             <span>产品查询</span>
           </a>
         </div>
@@ -67,8 +63,8 @@
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
           <li><a href="contact.html">联系我们</a></li>
-          <li><a href="search.html">产品查询</a></li>
           <li><a href="news.html">新闻中心</a></li>
+          <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
     </header>
@@ -302,13 +298,9 @@
           新春伊始，万象更新。浙江日出精细化工有限公司在2019年01月14日荣获中国《环境管理体系认证证书》，建立的质量管理体系符合G
         </div>
         <div class="news-list">
-          <a class="news-item animate"
-            >2018年度石化行业十大新闻发布 13位年度影响力人物揭晓</a
-          >
-          <a class="news-item animate">快讯:化工股继续高开</a>
-          <a class="news-item animate"
-            >响水化工厂爆炸相关新闻激增 媒体整理出核心信息</a
-          >
+          <a class="news-item animate" href="news-detail.html">2018年度石化行业十大新闻发布 13位年度影响力人物揭晓</a>
+          <a class="news-item animate" href="news-detail.html">快讯:化工股继续高开</a>
+          <a class="news-item animate" href="news-detail.html">响水化工厂爆炸相关新闻激增 媒体整理出核心信息</a>
         </div>
       </div>
     </section>
@@ -316,10 +308,8 @@
     <!-- 底部 -->
     <footer class="footer">
       <div class="btn-scroll-top">
-        <a id="toTop" class="scroll-top" href="javascript:void(0)">
-          <object class="animate">
-            <embed src="./assets/img/scroll-top.svg" />
-          </object>
+        <a id="toTop" class="scroll-top animate" href="javascript:void(0)">
+          <span class="scroll-top-icon animate"></span>
         </a>
       </div>
       <div class="f-main">
