--- a/richu_web/privacy.html
+++ b/richu_web/privacy.html
@@ -42,15 +42,11 @@
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="news.html">新闻中心</a></li>
             <li><a href="contact.html">联系我们</a></li>
+            <li><a href="news.html">新闻中心</a></li>
           </ul>
-          <a class="h-search nav-active" href="search.html">
-            <img
-              class="search-icon"
-              src="./assets/img/nav-bar-search-green.svg"
-              alt=""
-            />
+          <a class="h-search animate" href="search.html">
+            <div class="search-icon"></div>
             <span>产品查询</span>
           </a>
         </div>
@@ -66,15 +62,20 @@
           <li><a href="about.html">关于日出</a></li>
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="news.html">新闻中心</a></li>
           <li><a href="contact.html">联系我们</a></li>
+          <li><a href="news.html">新闻中心</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
     </header>
     <!-- 头部 end -->
+    
+    <section
+      class="about-top-banner"
+      style="background-image: url('./assets/img/banner-984@2x.png');"
+    ></section>
 
-    <section class="privacy-section section-top">
+    <section class="privacy-section">
       <div class="privacy-editor">
           <h3>慕枫网络隐私保护</h3>
           <p>慕枫网咯深知隐私的重要性。本网页概述我们在您使用网站服务的过程中所接收和收集的个人信息的种类，以及我们所采取的保护信息的一些措施。我们希望这将有助于您在知情的情况下，就和我们共享个人信息的问题作出决定。</p>
@@ -94,10 +95,8 @@
     <!-- 底部 -->
     <footer class="footer">
       <div class="btn-scroll-top">
-        <a id="toTop" class="scroll-top" href="javascript:void(0)">
-          <object class="animate">
-            <embed src="./assets/img/scroll-top.svg" />
-          </object>
+        <a id="toTop" class="scroll-top animate" href="javascript:void(0)">
+          <span class="scroll-top-icon animate"></span>
         </a>
       </div>
       <div class="f-main">
