--- a/richu_web/project.html
+++ b/richu_web/project.html
@@ -42,15 +42,11 @@
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html" class="nav-active">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="news.html">新闻中心</a></li>
             <li><a href="contact.html">联系我们</a></li>
+            <li><a href="news.html">新闻中心</a></li>
           </ul>
-          <a class="h-search nav-active" href="search.html">
-            <img
-              class="search-icon"
-              src="./assets/img/nav-bar-search-green.svg"
-              alt=""
-            />
+          <a class="h-search animate" href="search.html">
+            <div class="search-icon"></div>
             <span>产品查询</span>
           </a>
         </div>
@@ -66,8 +62,8 @@
           <li><a href="about.html">关于日出</a></li>
           <li><a href="project.html" class="nav-active">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="news.html">新闻中心</a></li>
           <li><a href="contact.html">联系我们</a></li>
+          <li><a href="news.html">新闻中心</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
@@ -481,8 +477,11 @@
                 </div>
                 <div class="fx-num-group">
                   <span class="num">2211<span>客户</span></span>
+                  <span class="middle-space"></span>
                   <span class="num">230<span>产品</span></span>
+                  <span class="middle-space"></span>
                   <span class="num">30<span>亿</span></span>
+                  <span class="middle-space"></span>
                   <span class="num">95%<span>销售至终端客户</span></span>
                 </div>
                 <div class="fx-image-row">
@@ -499,7 +498,7 @@
                 <div class="rc-proj-select-wrap">
                   <div class="btn-cir-green animate">
                     <span class="select-value-text">全部</span>
-                    <img src="./assets/img/t-1006.png" alt="" />
+                    <span class="drop-down-icon"></span>
                   </div>
                   <div class="rc-proj-select-container">
                     <ul class="rc-proj-select">
@@ -577,7 +576,7 @@
                 <div class="rc-proj-select-wrap">
                   <div class="btn-cir-green animate">
                     <span class="select-value-text">全部</span>
-                    <img src="./assets/img/t-1006.png" alt="" />
+                    <span class="drop-down-icon"></span>
                   </div>
                   <div class="rc-proj-select-container">
                     <ul class="rc-proj-select">
@@ -645,18 +644,18 @@
             <div class="title-en">PARTNER</div>
             <div class="logo-group">
               <img src="./assets/img/Redocn_2012060115451240@2x.png" alt="">
-              <img src="./assets/img/u=584284657,1441077962&fm=15&gp=0@2x.jpg" alt="">
-              <img src="./assets/img/c-boyuan.jpg" alt="">
-              <img src="./assets/img/c-basifu.jpg" alt="">
-              <img src="./assets/img/c-zhonghaiyou.jpg" alt="">
-              <img src="./assets/img/c-taoshi.jpg" alt="">
-              <img src="./assets/img/c-dubang.jpg" alt="">
-              <img src="./assets/img/c-huayi.jpg" alt="">
-              <img src="./assets/img/c-jinqinmeng.jpg" alt="">
-              <img src="./assets/img/c-meike.jpg" alt="">
-              <img src="./assets/img/fbb9e85eb7cfe14fc6a6f41a66baf093双欣@2x.jpg" alt="">
+              <img src="./assets/img/u=584284657,1441077962&fm=15&gp=0@2x.png" alt="">
+              <img src="./assets/img/c-boyuan.png" alt="">
+              <img src="./assets/img/c-basifu.png" alt="">
+              <img src="./assets/img/c-zhonghaiyou.png" alt="">
+              <img src="./assets/img/c-taoshi.png" alt="">
+              <img src="./assets/img/c-dubang.png" alt="">
+              <img src="./assets/img/c-huayi.png" alt="">
+              <img src="./assets/img/c-jinqinmeng.png" alt="">
+              <img src="./assets/img/c-meike.png" alt="">
+              <img src="./assets/img/c-shuangxin.png" alt="">
               <img src="./assets/img/c-983.png" alt="">
-              <img src="./assets/img/c-lantian.jpg" alt="">
+              <img src="./assets/img/c-lantian.png" alt="">
             </div>
           </div>
         </div>
@@ -679,9 +678,12 @@
                   专业从事精细化学品经营的分销商。 渠道经营，分销代理制商业模式。为合作伙伴提供技术、安全、质量管理和金融服务。专业领域：医药、农药、聚氨酯、涂料、电子等。
                 </div>
                 <div class="fx-num-group">
-                  <span class="num">2211</span>
-                  <span class="num">230</span>
-                  <span class="num">30</span>
+                  <span class="num">2211<span>客户</span></span>
+                  <span class="middle-space"></span>
+                  <span class="num">230<span>产品</span></span>
+                  <span class="middle-space"></span>
+                  <span class="num">30<span>亿</span></span>
+                  <span class="middle-space"></span>
                   <span class="num">95%<span>销售至终端客户</span></span>
                 </div>
                 <div class="fx-image-row">
@@ -696,7 +698,7 @@
                 <div class="rc-proj-select-wrap">
                   <div class="btn-cir-green animate">
                     <span class="select-value-text">全部</span>
-                    <img src="./assets/img/t-1006.png" alt="" />
+                    <span class="drop-down-icon"></span>
                   </div>
                   <div class="rc-proj-select-container">
                     <ul class="rc-proj-select">
@@ -766,18 +768,18 @@
             <div class="title-en">PARTNER</div>
             <div class="logo-group">
               <img src="./assets/img/Redocn_2012060115451240@2x.png" alt="">
-              <img src="./assets/img/u=584284657,1441077962&fm=15&gp=0@2x.jpg" alt="">
-              <img src="./assets/img/c-boyuan.jpg" alt="">
-              <img src="./assets/img/c-basifu.jpg" alt="">
-              <img src="./assets/img/c-zhonghaiyou.jpg" alt="">
-              <img src="./assets/img/c-taoshi.jpg" alt="">
-              <img src="./assets/img/c-dubang.jpg" alt="">
-              <img src="./assets/img/c-huayi.jpg" alt="">
-              <img src="./assets/img/c-jinqinmeng.jpg" alt="">
-              <img src="./assets/img/c-meike.jpg" alt="">
-              <img src="./assets/img/fbb9e85eb7cfe14fc6a6f41a66baf093双欣@2x.jpg" alt="">
+              <img src="./assets/img/u=584284657,1441077962&fm=15&gp=0@2x.png" alt="">
+              <img src="./assets/img/c-boyuan.png" alt="">
+              <img src="./assets/img/c-basifu.png" alt="">
+              <img src="./assets/img/c-zhonghaiyou.png" alt="">
+              <img src="./assets/img/c-taoshi.png" alt="">
+              <img src="./assets/img/c-dubang.png" alt="">
+              <img src="./assets/img/c-huayi.png" alt="">
+              <img src="./assets/img/c-jinqinmeng.png" alt="">
+              <img src="./assets/img/c-meike.png" alt="">
+              <img src="./assets/img/c-shuangxin.png" alt="">
               <img src="./assets/img/c-983.png" alt="">
-              <img src="./assets/img/c-lantian.jpg" alt="">
+              <img src="./assets/img/c-lantian.png" alt="">
             </div>
           </div>
         </div>
@@ -792,10 +794,8 @@
     <!-- 底部 -->
     <footer class="footer">
       <div class="btn-scroll-top">
-        <a id="toTop" class="scroll-top" href="javascript:void(0)">
-          <object class="animate">
-            <embed src="./assets/img/scroll-top.svg" />
-          </object>
+        <a id="toTop" class="scroll-top animate" href="javascript:void(0)">
+          <span class="scroll-top-icon animate"></span>
         </a>
       </div>
       <div class="f-main">
