--- a/richu_web/about.html
+++ b/richu_web/about.html
@@ -42,15 +42,11 @@
             <li><a href="about.html" class="nav-active">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="news.html">新闻中心</a></li>
             <li><a href="contact.html">联系我们</a></li>
+            <li><a href="news.html">新闻中心</a></li>
           </ul>
-          <a class="h-search nav-active" href="search.html">
-            <img
-              class="search-icon"
-              src="./assets/img/nav-bar-search-green.svg"
-              alt=""
-            />
+          <a class="h-search animate" href="search.html">
+            <div class="search-icon"></div>
             <span>产品查询</span>
           </a>
         </div>
@@ -66,8 +62,8 @@
           <li><a href="about.html" class="nav-active">关于日出</a></li>
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="news.html">新闻中心</a></li>
           <li><a href="contact.html">联系我们</a></li>
+          <li><a href="news.html">新闻中心</a></li>
           <li><a href="search.html">产品查询</a></li>
         </ul>
       </div>
@@ -97,17 +93,17 @@
 
       <div class="number-group">
         <div class="number-group-item">
-          <div class="number">199</div>
+          <div class="number timer count-number" data-to="199" data-speed="2000">0</div>
           <div class="desc">199名公司员工</div>
         </div>
         <div class="middle-line"></div>
         <div class="number-group-item">
-          <div class="number">78</div>
+          <div class="number timer count-number" data-to="78" data-speed="2000">0</div>
           <div class="desc">78亿元年销售总额</div>
         </div>
         <div class="middle-line"></div>
         <div class="number-group-item">
-          <div class="number">4</div>
+          <div class="number timer count-number" data-to="4" data-speed="2000">0</div>
           <div class="desc">4大产业领域</div>
         </div>
       </div>
@@ -194,10 +190,8 @@
     <!-- 底部 -->
     <footer class="footer">
       <div class="btn-scroll-top">
-        <a id="toTop" class="scroll-top" href="javascript:void(0)">
-          <object class="animate">
-            <embed src="./assets/img/scroll-top.svg" />
-          </object>
+        <a id="toTop" class="scroll-top animate" href="javascript:void(0)">
+          <span class="scroll-top-icon animate"></span>
         </a>
       </div>
       <div class="f-main">
