--- a/richu_web/search.html
+++ b/richu_web/search.html
@@ -42,15 +42,11 @@
             <li><a href="about.html">关于日出</a></li>
             <li><a href="project.html">集团产业</a></li>
             <li><a href="culture.html">人力资源</a></li>
-            <li><a href="news.html">新闻中心</a></li>
             <li><a href="contact.html">联系我们</a></li>
+            <li><a href="news.html">新闻中心</a></li>
           </ul>
-          <a class="h-search nav-active" href="search.html">
-            <img
-              class="search-icon"
-              src="./assets/img/nav-bar-search-green.svg"
-              alt=""
-            />
+          <a class="h-search animate" href="search.html">
+            <div class="search-icon"></div>
             <span>产品查询</span>
           </a>
         </div>
@@ -66,8 +62,8 @@
           <li><a href="about.html">关于日出</a></li>
           <li><a href="project.html">集团产业</a></li>
           <li><a href="culture.html">人力资源</a></li>
-          <li><a href="news.html">新闻中心</a></li>
           <li><a href="contact.html">联系我们</a></li>
+          <li><a href="news.html">新闻中心</a></li>
           <li><a href="search.html" class="nav-active">产品查询</a></li>
         </ul>
       </div>
@@ -84,7 +80,7 @@
         <div class="rc-proj-select-wrap">
           <div class="btn-cir-green animate">
             <span class="select-value-text">全部</span>
-            <img src="./assets/img/t-1006.png" alt="" />
+            <span class="drop-down-icon"></span>
           </div>
           <div class="rc-proj-select-container">
             <ul class="rc-proj-select">
@@ -120,13 +116,11 @@
             </ul>
           </div>
         </div>
-        <div class="search-input">
-          <img
+        <div class="search-input animate">
+          <span
             class="search-icon"
-            src="./assets/img/nav-bar-search.svg"
-            alt=""
-          />
-          <input type="text" placeholder="输入关键词搜素产品" />
+          ></span>
+          <input type="text" id="searchInput" placeholder="输入关键词搜素产品" />
         </div>
       </div>
       <div class="s-keyword">丙</div>
@@ -270,10 +264,8 @@
     <!-- 底部 -->
     <footer class="footer">
       <div class="btn-scroll-top">
-        <a id="toTop" class="scroll-top" href="javascript:void(0)">
-          <object class="animate">
-            <embed src="./assets/img/scroll-top.svg" />
-          </object>
+        <a id="toTop" class="scroll-top animate" href="javascript:void(0)">
+          <span class="scroll-top-icon animate"></span>
         </a>
       </div>
       <div class="f-main">
