--- a/richu_web/index.html
+++ b/richu_web/index.html
@@ -293,7 +293,7 @@
       <div class="middle-container news-wrap">
         <div class="en-title">Latest news</div>
         <div class="cn-title">最新资讯</div>
-        <div class="news-title">日出升级国际管理规范：ISOI4000</div>
+        <div class="news-title en-r-po">日出升级国际管理规范：ISOI4000</div>
         <div class="news-content">
           新春伊始，万象更新。浙江日出精细化工有限公司在2019年01月14日荣获中国《环境管理体系认证证书》，建立的质量管理体系符合G
         </div>
@@ -340,7 +340,7 @@
               地址：浙江省宁波市鄞州区天童南路588号宁波商会国贸中心a楼42层
             </div>
             <div>电话：0574-87979999</div>
-            <div>邮箱：sfcc@sfcc.com.cn</div>
+            <div class="en-r-po">邮箱：sfcc@sfcc.com.cn</div>
           </div>
           <div class="content-item">
             <div class="f-qrcode">
@@ -370,7 +370,7 @@
           </div>
         </div>
       </div>
-      <div class="f-copyright">
+      <div class="f-copyright en-r-po">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
         by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
