--- a/richu_web/contact.html
+++ b/richu_web/contact.html
@@ -89,7 +89,7 @@
         <div class="contact-item animate">
           <img class="c-icon" src="./assets/img/c-email.png" alt="" />
           <div class="c-label">邮箱</div>
-          <div class="c-text">sfcc@sfcc.com.</div>
+          <div class="c-text en-r-po">sfcc@sfcc.com.</div>
         </div>
         <div class="contact-item animate">
           <img class="c-icon" src="./assets/img/c-phone.png" alt="" />
@@ -130,7 +130,7 @@
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            <span>
+            <span class="en-r-po">
               zb@sfcc.com.cn
             </span>
           </div>
@@ -151,7 +151,7 @@
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            <span>
+            <span class="en-r-po">
               zb@sfcc.com.cn
             </span>
           </div>
@@ -172,7 +172,7 @@
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            <span>
+            <span class="en-r-po">
               zb@sfcc.com.cn
             </span>
           </div>
@@ -193,7 +193,7 @@
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            <span>
+            <span class="en-r-po">
               zb@sfcc.com.cn
             </span>
           </div>
@@ -214,7 +214,7 @@
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            <span>
+            <span class="en-r-po">
               zb@sfcc.com.cn
             </span>
           </div>
@@ -235,7 +235,7 @@
           </a>
           <div class="c-detail-row">
             <img src="./assets/img/s-c-message.png" alt="" />
-            <span>
+            <span class="en-r-po">
               zb@sfcc.com.cn
             </span>
           </div>
@@ -278,7 +278,7 @@
               地址：浙江省宁波市鄞州区天童南路588号宁波商会国贸中心a楼42层
             </div>
             <div>电话：0574-87979999</div>
-            <div>邮箱：sfcc@sfcc.com.cn</div>
+            <div class="en-r-po">邮箱：sfcc@sfcc.com.cn</div>
           </div>
           <div class="content-item">
             <div class="f-qrcode">
@@ -308,7 +308,7 @@
           </div>
         </div>
       </div>
-      <div class="f-copyright">
+      <div class="f-copyright en-r-po">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
         by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
