--- a/richu_web/news-detail.html
+++ b/richu_web/news-detail.html
@@ -190,7 +190,7 @@
               地址：浙江省宁波市鄞州区天童南路588号宁波商会国贸中心a楼42层
             </div>
             <div>电话：0574-87979999</div>
-            <div>邮箱：sfcc@sfcc.com.cn</div>
+            <div class="en-r-po">邮箱：sfcc@sfcc.com.cn</div>
           </div>
           <div class="content-item">
             <div class="f-qrcode">
@@ -220,7 +220,7 @@
           </div>
         </div>
       </div>
-      <div class="f-copyright">
+      <div class="f-copyright en-r-po">
         ©2019 日出实业集团有限公司 All Rights Reserved. 浙ICP备624765832号 Power
         by mfweb. <a href="copyright.html">网站声明</a> 丨 <a href="privacy.html">隐私政策</a>
       </div>
